--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
 	<meta charset = "UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>My first page</title>
 	<link rel="icon" type="image/png" href="bearhood_final1cisty-mensi.png">
 </head>
