--- a/about.html
+++ b/about.html
@@ -6,9 +6,6 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="bearhood.css">
-
-
-
   </head>
 
   <body>
@@ -65,29 +62,59 @@
   <!-- Forest image -->
 <!--   <div class="container">
 
-  <img src="forest.jpg" class="img-responsive" alt="Responsive image" >
+  <img src="forest.jpg" class="img-responsive" alt="forest" >
   </div>
  -->
-
+ 
    <!-- OTHER STUFF ON THE PAGE -->
 
   <div class="container">
-    <div class="jumbotron">
-      <h1>Welcome to Bearhood</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <div class="row">
+      <div class="col-lg-10 col-sm-10 col-xs-12">
+        <h3 align="center">Home to Foreign Language Acquisition</h3>
+        <h4 align="center">Fellowship in your speech emancipation</h4>
+      </div>
     </div>
 
-  </div>
-  <div class="container">
-    <h2>More Stuff</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <div id="div-logo-about" class="row">
+      <div class=" text-center col-lg-2 col-md-2 col-sm-2 col-xs-12">
+        <p align="center"><img id="logo-about" src="pics\bearhood_final1cisty.png" class="img-responsive float-center" alt="logo"></p>
+       </div>
+      <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12">
+        <p align="center">
+        <h5 id="languages"> English Slovak French</h5>
+        <ul>
+          <li>Language sessions</li>
+          <li>Interpreting services for your business and events:</li>
+            <ul>
+              <li>simultaneous interpreting</li>
+              <li>consecutive interpreting</li>
+              <li>whispered interpreting</li>
+             
+            </ul>
+          
+        </ul>
+        </p>
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-lg-10 col-sm-10 col-xs-12">
+        <p class="text-justify">My name is Veronika and I´ve embarked on an exciting and adventurous journey of teaching as someone who has always been shy and therefore had quite a good understanding of being unable to engage in a foreign language conversation. 
+        </p>
+        <br>
+        <p class="text-justify">I also knew that learning a foreign language at school didn´t help much and didn´t offer anything but grammatical answers to something that called for a more profound approach with durable results. 
+        </p>
+        <br>
+        <p class="text-justify">I realized I needed more. Not more grammar exercises but more personal and enriching experience of discovering myself through the foreign language. If anything, I understood one important thing: language is not a tool that we learn and use, it´s rather a part of who you are. A teacher is there to be your fellow on your way to say it aloud.
+        </p>
+      </div>
+    </div>
+
+
 
   </div>
-
-
-
+ 
   <!-- Need to have JQuery and Javascript for DropDown Actions to work -->
 
   <script
