--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="bearhood.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel='shortcut icon' type='image/x-icon' href='pics\favicon.ico'>
   </head>
 
   <body>
@@ -40,7 +40,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
 
-          <li><a href="index.html">Home</a></li>
+          <li class="active"><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="#">Courses</a></li>
           <li><a href="contact.html">Contact</a></li>
