--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
 
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="#">Courses</a></li>
+          <li><a href="courses.html">Courses</a></li>
           <li class="active"><a href="contact.html">Contact</a></li>
  
              <!-- Use this to separate a new link -->
