--- a/courses.html
+++ b/courses.html
@@ -96,7 +96,7 @@
     <p>Rather shy people may use our "Shy form" ;) </p>
     <br>
 
-  <form action="https://formspree.io/email@domain.tld" method="POST" />
+  <form action="https://formspree.io/janbarlak@gmail.com" method="POST" />
     <div class="form-row">
       <div class=" form-group col-lg-6 col-md-6 col-sm-6 col-sm-6">
         <label>First name</label>
