--- a/courses.html
+++ b/courses.html
@@ -115,7 +115,7 @@
 
     <div class="form-row">
       <div class=" form-group col-lg-6 col-md-6 col-sm-6 col-sm-6">
-    <button type="submit" class="btn btn-primary">Poke us</button>
+    <button type="submit" class="btn btn-primary" value="Send">Poke us</button>
   </div>
 </div>
 
