--- a/courses.html
+++ b/courses.html
@@ -118,7 +118,7 @@
     <button type="submit" class="btn btn-primary" value="Send">Poke us</button>
   </div>
 </div>
-
+<input type="hidden" name="_next" value="thanks.html" />
   </form>
 
  </div>
