--- a/index.html
+++ b/index.html
@@ -73,17 +73,34 @@
 
   <div class="container">
     <div class="jumbotron">
-      <h1>Welcome to Bearhood</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <center><p><strong>Sick of learning foreign language for years with rather little effect?</strong></p></center>
+      <br>
+      <ul>
+        <li><p>Forget painful vocabulary learning.</p></li>
+        <li><p>No to artificial grammar drill.</p></li>
+        <li><p>Get rid of age burden. Break free, become a child again and start a big adventure.</p></li>
+      </ul>
+      <br>
+      <center><p><i><sub>Children aren't troubled by bloody language learning, nor should you.</sub></i></p></center>
+
     </div>
 
   </div>
   <div class="container">
-    <h2>More Stuff</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <h4>Do you feel the same?</h4>
+    <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/V2liE-HiMcM?rel=0" frameborder="0" allow="accelerometer;" allowfullscreen></iframe>
+        </div>
+      </div>
+     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe width="290" height="163" src="https://www.youtube.com/embed/HzcTKiwN_ZE?rel=0" frameborder="0" allowfullscreen=""></iframe>
+        </div>
+      </div>
 
+    </div>
   </div>
 
 
