--- a/courses.html
+++ b/courses.html
@@ -54,7 +54,7 @@
        <!-- Stuff on the Right -->
 
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="https://www.google.sk/search?q=bearhood&oq=bearhood&aqs=chrome..69i57j69i60j0j69i60l2j0.6743j0j4&sourceid=chrome&ie=UTF-8#lrd=0x476c8b8155555555:0x6140256f4dfc06b,1,,">Reviews</a></li>
+          <li><a href="https://www.google.sk/search?q=bearhood&oq=bearhood&aqs=chrome..69i57j69i60j0j69i60l2j0.6743j0j4&sourceid=chrome&ie=UTF-8#lrd=0x476c8b8155555555:0x6140256f4dfc06b,1,," target="_blank">Reviews</a></li>
         </ul>
 
       </div><!-- /.navbar-collapse -->
