--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
     <div class="row">
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/V2liE-HiMcM?rel=0" frameborder="0" allow="accelerometer;" allowfullscreen></iframe>
+          <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/V2liE-HiMcM?rel=0" frameborder="0" allow="accelerometer;" allowfullscreen></iframe>
         </div>
       </div>
      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe width="290" height="163" src="https://www.youtube.com/embed/HzcTKiwN_ZE?rel=0" frameborder="0" allowfullscreen=""></iframe>
+          <iframe id="video" width="290" height="163" src="https://www.youtube.com/embed/HzcTKiwN_ZE?rel=0" frameborder="0" allowfullscreen=""></iframe>
         </div>
       </div>
 
